# HyperTea_Maker

./: .gitignore
caffe/: ._new_net_conv_opencl.hpp  CMakeLists.txt  compile.py  new_net_conv_opencl.hpp
caffe/examples/style_transfer/: ._moutai.ppm  output.ppm  style.prototxt
caffe/include/caffe/: common.hpp  layer.hpp
caffe/src/caffe/: layer.cpp  net.cpp
caffe/tools/: hypertea_generator.cpp  test.cpp
commandline_test/: Android.mk  CMakeLists.txt  build_android.sh  hello_world.cpp
commandline_test/build_arm64-v8a/: CMakeCache.txt  Makefile  cmake_install.cmake
commandline_test/jni/: Android.mk
commandline_test/libs/arm64-v8a/: hello_world
libdnn_tuner/: ._build_android.sh  tuner.hpp
libdnn_tuner/jni/: Android.mk  Application.mk  main.cpp
libdnn_tuner/sources/: CMakeLists.txt  benchmark.cpp  benchmark.hpp  libdnn_util.cpp  libdnn_util.hpp  opencl_util.cpp  opencl_util.hpp  tuner.cpp  tuner.hpp
libdnn_tuner/sources/build_arm64-v8a/: CMakeCache.txt  Makefile  cmake_install.cmake
pytorch/: ._activation_hooker.py  ._batchnorm_hooker.py  ._conv_hooker.py  ._convertor.py  ._hooker.py  ._libdnn.py  ._lstm.py  ._net.py  ._net1.py  ._netinfo.py  ._temp.py  ._test.py  ._ttt.py  ._untitled.py  ._util.py  MIOBatchNorm.py  activation_hooker.py  art_style_transfer.py  batchnorm_hooker.py  conv_file.cl  conv_hooker.py  hypertea_generator.py  libdnn.py  lstm.py  net.py  net1.py  netinfo.py  rnn_hooker.py  sphere20a.py  sphereface.py  temp.bk  temp.cpp  temp_bn.cl  temp_code  temp_conv.cl  test.py  test_rnn.py  ttt.py  untitled.py
pytorch/hypertea_generator/: hypertea_generator.py  netinfo.py  util.py
pytorch/hypertea_generator/hookers/: activation_hooker.py  batchnorm_hooker.py  conv_hooker.py  linear_hooker.py  rnn_hooker.py
(+24 files in other folders)
